criação de backup e correção de bugs

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -80,9 +80,9 @@
     <h4>Painel Admin</h4>
     <a href="{{ url_for('admin.index') }}"><i class="fas fa-home"></i> Dashboard</a>
     <a href="{{ url_for('admin.clientes_cadastrados') }}"><i class="fas fa-users"></i> Clientes</a>
-    <a href="{{ url_for('admin.divida_ativa') }}"><i class="fas fa-landmark"></i> Débitos Federais</a>
-    <a href="{{ url_for('admin.divida_ativa') }}"><i class="fas fa-map"></i> Débitos Estaduais</a>
-    <a href="{{ url_for('admin.divida_ativa') }}"><i class="fas fa-city"></i> Débitos Municipais</a>
+    <a href="{{ url_for('admin.dividas_federais') }}"><i class="fas fa-landmark"></i> Débitos Federais</a>
+    <a href="{{ url_for('admin.divida_estadual') }}"><i class="fas fa-map"></i> Débitos Estaduais</a>
+    <a href="{{ url_for('admin.divida_municipal') }}"><i class="fas fa-city"></i> Débitos Municipais</a>
     <a href="{{ url_for('admin.cobranca_judicial') }}"><i class="fas fa-chart-line"></i> Cobrança Judicial</a>
     <a href="{{ url_for('admin.suporte') }}"><i class="fas fa-headset"></i> Auditoria de Dívida</a>
     <a href="{{ url_for('admin.financeiro') }}"><i class="fas fa-wallet"></i> Negociação de Dívida</a>
